# src/routes/auth/index.js
@@ -1,14 +1,14 @@
 const express = require("express");
-const { login, register } = require("../../controllers/auth/index");
+const {
+  login,
+  register,
+  refreshToken,
+} = require("../../controllers/auth/index");
 
 const router = express.Router();
 
-// Controllers
-
-// Login route
 router.post("/login", login);
-
-// Register route
 router.post("/register", register);
+router.post("/refresh-token", refreshToken);
 
 module.exports = router;
